corrected html errors on the wireframe

--- a/index.html
+++ b/index.html
@@ -19,12 +19,13 @@
 <body>
     <header role="banner">
         <div class="header">
+            <!--
             <button type="button" class="menu-btn">
-                <div class="menu-bar"></div>
-                <div class="menu-bar"></div>
-                <div class="menu-bar"></div>
+                <span class="menu-bar"></span>
+                <span class="menu-bar"></span>
+                <span class="menu-bar"></span>
             </button>
-
+            -->
             <h1 class="header-name">Justin Mendola-Wong</h1>
 
             <div class="menu">
@@ -60,7 +61,15 @@
 
     </main>
 
-    <footer>
+    <footer class="footer">
+        <div>
+            <p class="contact">Contact</p>
+            <ul>
+                <li><a class="email" href="mailto:jwong.ncsu@gmail.com">Email icon</a></li>
+                <li><a class="github" href="https://github.com/jmw7">Github icon</a></li>
+            </ul>
+        </div>
+
 
     </footer>
 
