Added media queries; cleaned up formating

--- a/index.html
+++ b/index.html
@@ -19,13 +19,6 @@
 <body>
     <header role="banner">
         <div class="header">
-            <!--
-            <button type="button" class="menu-btn">
-                <span class="menu-bar"></span>
-                <span class="menu-bar"></span>
-                <span class="menu-bar"></span>
-            </button>
-            -->
             <h1 class="header-name">Justin Mendola-Wong</h1>
 
             <div class="menu">
@@ -34,10 +27,6 @@
                     <li><a class="jumper" href="#portfolio">Portfolio</a></li>
                 </ul>
             </div>
-            <!--
-            <input type="image" src="" alt="github logo" class="logo">
-            <input type="image" src="" alt="email logo" class="logo">
-            -->
         </div>
     </header>
 
@@ -65,8 +54,9 @@
         <div>
             <p class="contact">Contact</p>
             <ul>
-                <li><a class="email" href="mailto:jwong.ncsu@gmail.com">Email icon</a></li>
+                <li><a class="email" href="mailto:jwong.ncsu@gmail.com">email icon</a></li>
                 <li><a class="github" href="https://github.com/jmw7">Github icon</a></li>
+                <li><a class="linkedin" href="linkedin.com">Linkedin icon</a></li>
             </ul>
         </div>
 
