Content and styling add

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 </head>
 
-<body>
+<body class="container">
     <header role="banner">
         <div class="header">
             <h1 class="header-name">Justin Mendola-Wong</h1>
@@ -32,18 +32,29 @@
 
     <main role="main" class="main">
         <section id="aboutMe">
-            <p>About me</p>
+            <h2>Hi, I'm Justin. I'm a full stack web developer (in training) </h2>
+            <p>I'm a web developer apprentice focused on HTML, CSS, jQuery, sprinkled with a little ASP Classic and SQL.
+            <br>Why coding? Because I'm a constant problem solver and the immediate creation at your fingertips when writing a block of code highly rewarding. 
+            <br>I'm also an avid traveler (30+ countries and counting) and a huge foodie for the local cuisine of whatever country I visit. Much in the same way as coding, I love the exploratory and creative nature that travel brings.</p>
         </section>
         <section id="portfolio">
+            <h2>My Portfolio</h2>
             <div class="project">
-                <input type="image" src="" alt="Project 1 image" class="project_img">
-                <p>Project 1 Description</p>
+                <input type="image" src="images/lotr_quiz.png" alt="Project 1 image" class="lotr_img image">
+                <h3>Lord of the Rings Quiz </h3>
+                <p>How well do you know the Lord of the Rings movie Trilogy? Test your knowledge with some trivia questions that span across all three movies. 
+                    <br>Built using HTML, CSS and jQuery.</p>
+                    <ul class="links">
+                        <li><a class="vert link" href="https://github.com/jmw7">Github</a></li>
+                        <li><a class="link" href="https://jmw7.github.io/Portfolio">View Project</a></li>
+                    </ul>
             </div>
-
+            <!--
             <div class="project">
                 <input type="image" src="" alt="Project 2 image" class="project_img">
                 <p>Project 2 Description</p>
             </div>
+            -->
         </section>
 
 
@@ -52,7 +63,7 @@
 
     <footer class="footer">
         <div>
-            <p class="contact">Contact</p>
+            <h2 class="contact">Contact Me</h2>
             <ul>
                 <li><a class="email" href="mailto:jwong.ncsu@gmail.com">email icon</a></li>
                 <li><a class="github" href="https://github.com/jmw7">Github icon</a></li>
