needed double quotes for .css link

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.css" rel="stylesheet">
 
     <!--Link stylesheets to html file-->
-    <link rel="stylesheet" href='index.css'>
+    <link rel="stylesheet" href="index.css">
 
 </head>
 
