Added second project image

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         <section id="aboutMe">
             <h2>Hi, I'm Justin. I'm a full stack web developer (in training) </h2>
             <p>I'm a web developer apprentice focused on HTML, CSS, jQuery, sprinkled with a little ASP Classic and SQL.
-            <br>Why coding? Because I'm a constant problem solver and the immediate creation at your fingertips when writing a block of code highly rewarding. 
-            <br>I'm also an avid traveler (30+ countries and counting) and a huge foodie for the local cuisine of whatever country I visit. Much in the same way as coding, I love the exploratory and creative nature that travel brings.</p>
+            <br>Why coding? Because I'm a constant problem solver and the immediate creation at your fingertips when writing a block of code is supremely satisfying. 
+            <br>I'm also an avid traveler (30+ countries and counting) and a huge foodie for the local cuisine of whatever country I visit.</p>
         </section>
         <section id="portfolio">
             <h2>My Portfolio</h2>
