Added second project description

--- a/index.html
+++ b/index.html
@@ -2,77 +2,88 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
+  <meta charset="utf-8">
 
-    <!-- Responsive viewport tag: tells small screens that it's responsive-->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Portfolio</title>
+  <!-- Responsive viewport tag: tells small screens that it's responsive-->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Portfolio</title>
 
-    <!--Normalize.css, a cross browser reset file-->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.css" rel="stylesheet">
+  <!--Normalize.css, a cross browser reset file-->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.css" rel="stylesheet">
 
-    <!--Link stylesheets to html file-->
-    <link rel="stylesheet" href="index.css">
+  <!--Link stylesheets to html file-->
+  <link rel="stylesheet" href="index.css">
 
 </head>
 
 <body class="container">
-    <header role="banner">
-        <div class="header">
-            <h1 class="header-name">Justin Mendola-Wong</h1>
+  <header role="banner">
+    <div class="header">
+      <h1 class="header-name">Justin Mendola-Wong</h1>
 
-            <div class="menu">
-                <ul>
-                    <li><a class="jumper" href="#aboutMe">About Me</a></li>
-                    <li><a class="jumper" href="#portfolio">Portfolio</a></li>
-                </ul>
-            </div>
-        </div>
-    </header>
+      <div class="menu">
+        <ul>
+          <li><a class="jumper" href="#aboutMe">About Me</a></li>
+          <li><a class="jumper" href="#portfolio">Portfolio</a></li>
+        </ul>
+      </div>
+    </div>
+  </header>
 
-    <main role="main" class="main">
-        <section id="aboutMe">
-            <h2>Hi, I'm Justin. I'm a full stack web developer (in training) </h2>
-            <p>I'm a web developer apprentice focused on HTML, CSS, jQuery, sprinkled with a little ASP Classic and SQL.
-            <br>Why coding? Because I'm a constant problem solver and the immediate creation at your fingertips when writing a block of code is supremely satisfying. 
-            <br>I'm also an avid traveler (30+ countries and counting) and a huge foodie for the local cuisine of whatever country I visit.</p>
-        </section>
-        <section id="portfolio">
-            <h2>My Portfolio</h2>
-            <div class="project">
-                <input type="image" src="images/lotr_quiz.png" alt="Project 1 image" class="lotr_img image">
-                <h3>Lord of the Rings Quiz </h3>
-                <p>How well do you know the Lord of the Rings movie Trilogy? Test your knowledge with some trivia questions that span across all three movies. 
-                    <br>Built using HTML, CSS and jQuery.</p>
-                    <ul class="links">
-                        <li><a class="vert link" href="https://github.com/jmw7">Github</a></li>
-                        <li><a class="link" href="https://jmw7.github.io/Portfolio">View Project</a></li>
-                    </ul>
-            </div>
-            <!--
-            <div class="project">
-                <input type="image" src="" alt="Project 2 image" class="project_img">
-                <p>Project 2 Description</p>
-            </div>
-            -->
-        </section>
+  <main role="main" class="main">
+    <section id="aboutMe">
+      <h2>Hi, I'm Justin. I'm a full stack web developer (in training) </h2>
+      <p>I'm a web developer apprentice focused on HTML, CSS, jQuery, sprinkled with a little ASP Classic and SQL.
+        <br>Why coding? Because I'm a constant problem solver and the immediate creation at your fingertips when writing
+        a block of code is supremely satisfying.
+        <br>I'm also an avid traveler (30+ countries and counting) and a huge foodie for the local cuisine of whatever
+        country I visit.</p>
+    </section>
+    <section id="portfolio">
+      <h2>My Portfolio</h2>
+      <div class="project">
+        <input type="image" src="images/lotr_quiz.png" alt="Project 1 image" class="lotr_img image">
+        <h3>Lord of the Rings Quiz </h3>
+        <p>How well do you know the Lord of the Rings movie Trilogy? Test your knowledge with some trivia questions that
+          span across all three movies.
+          <br>Built using HTML, CSS and jQuery.</p>
+        <ul class="links">
+          <li><a class="vert link" href="https://github.com/jmw7">Github</a></li>
+          <li><a class="link" href="https://jmw7.github.io/Portfolio">View Project</a></li>
+        </ul>
+      </div>
 
+      <div class="project">
+        <input type="image" src="images/Event-Findr.png" alt="Project 2 image" class="event_findr_img image">
+        <h3>Findr</h3>
+        <p>Event Findr is a pet project honing in third party API integration. It integrates with the TicketMaster and
+          APIXU Weather.
+          <br>The user is able to search events located by city or zip code and the weather for the current day of
+          search. </p>
+          <ul class='links'>
+            <li><a class='link' href='https://github.com/jmw7/Event-Findr'>Github</a></li>
+            <li><a class='link' href='https://jmw7.github.io/Event-Findr/'>View Project</a></li>
+          </ul>
+      </div>
 
-
-    </main>
-
-    <footer class="footer">
-        <div>
-            <h2 class="contact">Contact Me</h2>
-            <ul>
-                <li><a class="email" href="mailto:jwong.ncsu@gmail.com">email icon</a></li>
-                <li><a class="github" href="https://github.com/jmw7">Github icon</a></li>
-                <li><a class="linkedin" href="linkedin.com">Linkedin icon</a></li>
-            </ul>
-        </div>
+    </section>
 
 
-    </footer>
+
+  </main>
+
+  <footer class="footer">
+    <div>
+      <h2 class="contact">Contact Me</h2>
+      <ul>
+        <li><a class="email" href="mailto:jwong.ncsu@gmail.com">email icon</a></li>
+        <li><a class="github" href="https://github.com/jmw7">Github icon</a></li>
+        <li><a class="linkedin" href="linkedin.com">Linkedin icon</a></li>
+      </ul>
+    </div>
+
+
+  </footer>
 
 </body>
 
