--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
       <div class="project">
         <input type="image" src="images/Event-Findr.png" alt="Project 2 image" class="event_findr_img image">
         <h3>Findr</h3>
-        <p>Event Findr is a pet project honing in third party API integration. It integrates with the TicketMaster and
-          APIXU Weather.
-          <br>The user is able to search events located by city or zip code and the weather for the current day of
-          search. </p>
+        <p>Event Findr is a pet project honing in on third party API integration. It connects with the TicketMaster and
+          APIXU Weather APIs. The user is able to search events located by city or zip code and the weather for the current day of
+          search.
+          <br>Built using HTML, CSS and jQuery </p>
           <ul class='links'>
-            <li><a class='link' href='https://github.com/jmw7/Event-Findr'>Github</a></li>
+            <li><a class='link' href='https://github.com/jmw7/Event-Findr'><Github></a></li>
             <li><a class='link' href='https://jmw7.github.io/Event-Findr/'>View Project</a></li>
           </ul>
       </div>
@@ -76,9 +76,9 @@
     <div>
       <h2 class="contact">Contact Me</h2>
       <ul>
-        <li><a class="email" href="mailto:jwong.ncsu@gmail.com">email icon</a></li>
-        <li><a class="github" href="https://github.com/jmw7">Github icon</a></li>
-        <li><a class="linkedin" href="linkedin.com">Linkedin icon</a></li>
+        <li><a class="email" href="mailto:jwong.ncsu@gmail.com"><img src='images/email.png' alt='email' class='icon'></a></li>
+        <li><a class="github" href="https://github.com/jmw7"><img src='images/Github.png' alt='github' class='icon'></a></li>
+        <li><a class="linkedin" href="linkedin.com"><img src='images/linkedIn.png.png' alt='linkedIN' class='icon'></a></li>
       </ul>
     </div>
 
