--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <ul>
         <li><a class="email" href="mailto:jwong.ncsu@gmail.com"><img src='images/email.png' alt='email' class='icon'></a></li>
         <li><a class="github" href="https://github.com/jmw7"><img src='images/Github.png' alt='github' class='icon'></a></li>
-        <li><a class="linkedin" href="linkedin.com"><img src='images/linkedIn.png.png' alt='linkedIN' class='icon'></a></li>
+        <li><a class="linkedin" href="linkedin.com"><img src='images/linkedIn.png.png' alt='linkedIn' class='icon'></a></li>
       </ul>
     </div>
 
