fixed some styling

--- a/index.html
+++ b/index.html
@@ -57,13 +57,14 @@
         <input type="image" src="images/Event-Findr.png" alt="Project 2 image" class="event_findr_img image">
         <h3>Findr</h3>
         <p>Event Findr is a pet project honing in on third party API integration. It connects with the TicketMaster and
-          APIXU Weather APIs. The user is able to search events located by city or zip code and the weather for the current day of
+          APIXU Weather APIs. The user is able to search events located by city or zip code and the weather for the
+          current day of
           search.
           <br>Built using HTML, CSS and jQuery </p>
-          <ul class='links'>
-            <li><a class='link' href='https://github.com/jmw7/Event-Findr'><Github></a></li>
-            <li><a class='link' href='https://jmw7.github.io/Event-Findr/'>View Project</a></li>
-          </ul>
+        <ul class='links'>
+          <li><a class='link' href='https://github.com/jmw7/Event-Findr'>Github</a></li>
+          <li><a class='link' href='https://jmw7.github.io/Event-Findr/'>View Project</a></li>
+        </ul>
       </div>
 
     </section>
@@ -76,9 +77,12 @@
     <div>
       <h2 class="contact">Contact Me</h2>
       <ul>
-        <li><a class="email" href="mailto:jwong.ncsu@gmail.com"><img src='images/email.png' alt='email' class='icon'></a></li>
-        <li><a class="github" href="https://github.com/jmw7"><img src='images/Github.png' alt='github' class='icon'></a></li>
-        <li><a class="linkedin" href="https://www.linkedin.com/in/justin-mendola-wong-54430a164/"><img src='images/linkedIn.png' alt='linkedIn' class='icon'></a></li>
+        <li><a class="email" href="mailto:jwong.ncsu@gmail.com"><img src='images/email.png' alt='email'
+              class='icon'></a></li>
+        <li><a class="github" href="https://github.com/jmw7"><img src='images/Github.png' alt='github' class='icon'></a>
+        </li>
+        <li><a class="linkedin" href="https://www.linkedin.com/in/justin-mendola-wong-54430a164/"><img
+              src='images/linkedIn.png' alt='linkedIn' class='icon'></a></li>
       </ul>
     </div>
 
