Fixed styling issues

--- a/index.html
+++ b/index.html
@@ -76,11 +76,9 @@
   <footer class="footer">
     <div>
       <h2 class="contact">Contact Me</h2>
-      <ul>
-        <li><a class="email" href="mailto:jwong.ncsu@gmail.com"><img src='images/email.png' alt='email'
-              class='icon'></a></li>
-        <li><a class="github" href="https://github.com/jmw7"><img src='images/Github.png' alt='github' class='icon'></a>
-        </li>
+      <ul class='contact-icons'>
+        <li><a class="email" href="mailto:jwong.ncsu@gmail.com"><img src='images/email.png' alt='email' class='icon'></a></li>
+        <li><a class="github" href="https://github.com/jmw7"><img src='images/Github.png' alt='github' class='icon'></a></li>
         <li><a class="linkedin" href="https://www.linkedin.com/in/justin-mendola-wong-54430a164/"><img
               src='images/linkedIn.png' alt='linkedIn' class='icon'></a></li>
       </ul>
