Fixed styling issues

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     </div>
   </header>
 
-  <main role="main" class="main">
-    <section id="aboutMe">
+  <main role="main" class="main" id="aboutMe">
+    <section >
       <h2>Hi, I'm Justin. I'm a full stack web developer (in training) </h2>
       <p>I'm a web developer apprentice focused on HTML, CSS, jQuery, sprinkled with a little ASP Classic and SQL.
         <br>Why coding? Because I'm a constant problem solver and the immediate creation at your fingertips when writing
