Fixed styling issues

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
     </div>
   </header>
 
+ <div class='header-filler'></div>
+  
   <main role="main" class="main" id="aboutMe">
     <section >
       <h2>Hi, I'm Justin. I'm a full stack web developer (in training) </h2>
