Fixed styling issues

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           span across all three movies.
           <br>Built using HTML, CSS and jQuery.</p>
         <ul class="links">
-          <li><a class="vert link" href="https://github.com/jmw7">Github</a></li>
+          <li><a class="link" href="https://github.com/jmw7">Github</a></li>
           <li><a class="link" href="https://jmw7.github.io/Portfolio">View Project</a></li>
         </ul>
       </div>
