--- a/index.html
+++ b/index.html
@@ -30,16 +30,19 @@
     </div>
   </header>
 
- <div class='header-filler'></div>
-  
+  <div class='header-filler'></div>
+
   <main role="main" class="main" id="aboutMe">
-    <section >
-      <h2>Hi, I'm Justin. I'm a full stack web developer (in training) </h2>
-      <p>I'm a web developer apprentice focused on HTML, CSS, jQuery, sprinkled with a little ASP Classic and SQL.
-        <br>Why coding? Because I'm a constant problem solver and the immediate creation at your fingertips when writing
-        a block of code is supremely satisfying.
-        <br>I'm also an avid traveler (30+ countries and counting) and a huge foodie for the local cuisine of whatever
-        country I visit.</p>
+    <section>
+      <h2>Hi, I'm Justin. I'm a full stack web developer (in training)</h2>
+      <div class='project'>
+        <p>I'm a web developer apprentice focused on HTML, CSS, jQuery, sprinkled with a little ASP Classic and SQL.
+          <br>Why coding? Because I'm a constant problem solver and the immediate creation at your fingertips when
+          writing
+          a block of code is supremely satisfying.
+          <br>I'm also an avid traveler (30+ countries and counting) and a huge foodie for the local cuisine of whatever
+          country I visit.</p>
+      </div>
     </section>
     <section id="portfolio">
       <h2>My Portfolio</h2>
@@ -79,8 +82,10 @@
     <div>
       <h2 class="contact">Contact Me</h2>
       <ul class='contact-icons'>
-        <li><a class="email" href="mailto:jwong.ncsu@gmail.com"><img src='images/email.png' alt='email' class='icon'></a></li>
-        <li><a class="github" href="https://github.com/jmw7"><img src='images/Github.png' alt='github' class='icon'></a></li>
+        <li><a class="email" href="mailto:jwong.ncsu@gmail.com"><img src='images/email.png' alt='email'
+              class='icon'></a></li>
+        <li><a class="github" href="https://github.com/jmw7"><img src='images/Github.png' alt='github' class='icon'></a>
+        </li>
         <li><a class="linkedin" href="https://www.linkedin.com/in/justin-mendola-wong-54430a164/"><img
               src='images/linkedIn.png' alt='linkedIn' class='icon'></a></li>
       </ul>
