--- a/index.html
+++ b/index.html
@@ -35,13 +35,12 @@
   <main role="main" class="main" id="aboutMe">
     <section>
       <h2>Hi, I'm Justin. I'm a full stack web developer (in training)</h2>
-      <div class='project'>
-        <p>I'm a web developer apprentice focused on HTML, CSS, jQuery, sprinkled with a little ASP Classic and SQL.
-          <br>Why coding? Because I'm a constant problem solver and the immediate creation at your fingertips when
-          writing
-          a block of code is supremely satisfying.
-          <br>I'm also an avid traveler (30+ countries and counting) and a huge foodie for the local cuisine of whatever
-          country I visit.</p>
+      <div class="project">
+        <p>I'm a web developer apprentice focused on HTML, CSS and jQuery, sprinkled with a little bit of ASP Classic and SQL. 
+          <br>I love web development because it's the answer to a myriad of problems in the world, with a little bit of tailoring of course.
+          Building solutions for these problems brings satisfaction rivaled only with the placement of the last piece in a jigsaw puzzle.
+          I've taken this coding journey solo for quite some time and I'm thirsty to contribute and be challenged by a team of great developers.
+          <br>If I'm not found behind a keyboard, I'm probably throwing a frisbee, maybe trying out a new restaurant in town, or quite possibly on a plane to a explore a new country. </p>
       </div>
     </section>
     <section id="portfolio">
@@ -49,8 +48,8 @@
       <div class="project">
         <input type="image" src="images/lotr_quiz.png" alt="Project 1 image" class="lotr_img image">
         <h3>Lord of the Rings Quiz </h3>
-        <p>How well do you know the Lord of the Rings movie Trilogy? Test your knowledge with some trivia questions that
-          span across all three movies.
+        <p>This is for LOTR fans of all ages. How well do you know the Lord of the Rings movie Trilogy? Test your knowledge with some trivia questions that
+          span across all three movies. This was inspired in a conversation with a friend being quizzed on our knowledge of the movies.
           <br>Built using HTML, CSS and jQuery.</p>
         <ul class="links">
           <li><a class="link" href="https://github.com/jmw7">Github</a></li>
@@ -61,10 +60,10 @@
       <div class="project">
         <input type="image" src="images/Event-Findr.png" alt="Project 2 image" class="event_findr_img image">
         <h3>Findr</h3>
-        <p>Event Findr is a pet project honing in on third party API integration. It connects with the TicketMaster and
-          APIXU Weather APIs. The user is able to search events located by city or zip code and the weather for the
-          current day of
-          search.
+        <p>Event Findr is a project that hones in on third party API integration. It connects with the TicketMaster and
+          APIXU Weather APIs. How many times have you had a free Friday night and no novel ideas were coming to mind? This app is for you.
+          <br>Event Findr gives the user the ability to search for events located by city or zip code and the weather for the current day of search.
+          <br>Never again be plagued by sitting at home with no plans over the weekend!
           <br>Built using HTML, CSS and jQuery </p>
         <ul class='links'>
           <li><a class='link' href='https://github.com/jmw7/Event-Findr'>Github</a></li>
