--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <br>I love web development because it's the answer to a myriad of problems in the world, with a little bit of tailoring of course.
           Building solutions for these problems brings satisfaction rivaled only with the placement of the last piece in a jigsaw puzzle.
           I've taken this coding journey solo for quite some time and I'm thirsty to contribute and be challenged by a team of great developers.
-          <br>If I'm not found behind a keyboard, I'm probably throwing a frisbee, maybe trying out a new restaurant in town, or quite possibly on a plane to a explore a new country. </p>
+          <br>If I'm not behind a keyboard, I'm probably throwing a frisbee, maybe trying out a new restaurant in town, or quite possibly on a plane to a explore a new country. </p>
       </div>
     </section>
     <section id="portfolio">
@@ -52,18 +52,19 @@
           span across all three movies. This was inspired in a conversation with a friend being quizzed on our knowledge of the movies.
           <br>Built using HTML, CSS and jQuery.</p>
         <ul class="links">
-          <li><a class="link" href="https://github.com/jmw7">Github</a></li>
-          <li><a class="link" href="https://jmw7.github.io/Portfolio">View Project</a></li>
+          <li><a class="link" href="https://github.com/jmw7/LOTR-Quiz">Github</a></li>
+          <li><a class="link" href="https://jmw7.github.io/LOTR-Quiz/">View Project</a></li>
         </ul>
       </div>
 
       <div class="project">
         <input type="image" src="images/Event-Findr.png" alt="Project 2 image" class="event_findr_img image">
-        <h3>Findr</h3>
-        <p>Event Findr is a project that hones in on third party API integration. It connects with the TicketMaster and
-          APIXU Weather APIs. How many times have you had a free Friday night and no novel ideas were coming to mind? This app is for you.
+        <h3>Event Findr</h3>
+        <p>How many times have you had a free Friday night and no novel ideas were coming to mind? This app is for you.
           <br>Event Findr gives the user the ability to search for events located by city or zip code and the weather for the current day of search.
           <br>Never again be plagued by sitting at home with no plans over the weekend!
+          <br><br>Event Findr is a project that hones in on third party API integration. It connects with the TicketMaster and
+          APIXU Weather APIs.
           <br>Built using HTML, CSS and jQuery </p>
         <ul class='links'>
           <li><a class='link' href='https://github.com/jmw7/Event-Findr'>Github</a></li>
